Initial commit of project, implemented features:
- Ericsson t28 dispay driver
- LIN bus based Jog controller driver
-  Graphic UI, with hard coded menuitems.
- "Secret" menu for debugging and extended features
- Speed, turbo pressure and engine temperature measurements.

--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,10 @@
 *.so.*
 *.dylib
 
+# Compiled object files
+*.o
+*.O
+
 # Executables
 *.exe
 *.out
@@ -36,11 +40,17 @@
 *.x86_64
 *.hex
 
+# Mplab project files
+*.cof
+*.map 
+*.lst
+
 # Debug files
 *.dSYM/
 *.su
 *.idb
 *.pdb
+*.err
 
 # Kernel Module Compile Results
 *.mod*
@@ -50,3 +60,7 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+
+
+
